# StudentManger

./: README.md  architecture_design.md  database.sql
.cache/clangd/index/: databasehandler.cpp.E4FC5612EF19C5B7.idx  databasehandler.h.FBABE1CB4934831D.idx  main.cpp.CDCA00F018C882F8.idx
client/: CMakeLists.txt  applicationreviewwindow.cpp  applicationreviewwindow.h  databaseconnection.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  networkmanager.cpp  networkmanager.h  statisticswindow.cpp  statisticswindow.h  topicbrowsingwindow.cpp  topicbrowsingwindow.h  topicmanagementwindow.cpp  topicmanagementwindow.h  usermanagementwindow.cpp  usermanagementwindow.h
client/.qtcreator/: CMakeLists.txt.user.fed6803
server/: CMakeLists.txt  clienthandler.cpp  clienthandler.h  databasehandler.cpp  databasehandler.h  main.cpp
server/.qtcreator/: CMakeLists.txt.user.fed6803
